# testTasks

./: .gitignore  README.md  docker-compose.dev.yml  pyproject.toml  setup.cfg
src/: conftest.py
src/_app/: asgi.py  settings.py  urls.py  wsgi.py
src/_app/test/: api_client.py
src/bookstore/: definitions.py  models.py
src/bookstore/api/: serializers.py  views.py
src/bookstore/migrations/: 0001_initial.py
src/bookstore/tests/: conftest.py
src/bookstore/tests/api/: tests_books_crud.py  tests_subscription_update_on_payment.py
src/bookstore/tests/unit/: tests_subscription_is_stale.py  tests_subscription_queryset_active.py  tests_subscription_update_due_date.py
src/users/: models.py
src/users/api/: serializers.py  views.py
src/users/migrations/: 0001_initial.py
src/users/tests/api/: tests_users_crud.py
src/users/tests/unit/: tests_users_creation.py
